--- a/lib/reveal.css
+++ b/lib/reveal.css
@@ -1685,10 +1685,11 @@ body {
   margin: 0 0 20px 0;
   color: #fff;
   font-family: "Source Sans Pro", Helvetica, sans-serif;
+  font-family: 'Poiret One', Segoe UI Light, cursive;
   font-weight: 600;
   line-height: 1.2;
   letter-spacing: normal;
-  text-transform: uppercase;
+  /* text-transform: uppercase; */
   text-shadow: none;
   word-wrap: break-word; }
 
